<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools">

    <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:fitsSystemWindows="true"
            android:layout_height="match_parent">

        <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar"
                android:minHeight="?attr/actionBarSize"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:titleTextColor="@android:color/white"
                android:background="?attr/colorPrimary"
                android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
                app:popupTheme="@style/ThemeOverlay.AppCompat.Light"/>

        <ScrollView
                android:layout_width="match_parent"
                android:layout_height="match_parent">

            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_marginTop="@dimen/spacing_xlarge"
                    android:paddingLeft="@dimen/activity_horizontal_margin"
                    android:paddingRight="@dimen/activity_horizontal_margin">

                <de.hdodenhof.circleimageview.CircleImageView
                        android:id="@+id/iv_debtor"
                        android:layout_width="100dp"
                        android:layout_height="100dp"
                        android:layout_gravity="center_horizontal"
                        android:src="@drawable/ic_avatar"/>

                <RadioGroup
                        android:id="@+id/rg_debt_type"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:gravity="center_horizontal"
                        android:layout_marginTop="@dimen/spacing_large">

                    <RadioButton
                            android:id="@+id/rb_owed_to_me"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/action_owed_to_me"
                            android:checked="true"/>

                    <RadioButton
                            android:id="@+id/rb_owed_by_me"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="@dimen/spacing_large"
                            android:layout_marginStart="@dimen/spacing_large"
                            android:text="@string/action_owed_by_me"/>

                </RadioGroup>

                <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:baselineAligned="false"
                        android:weightSum="3">

                    <com.google.android.material.textfield.TextInputLayout
                            android:id="@+id/til_name"
                            android:layout_height="wrap_content"
                            android:layout_width="0dp"
                            android:layout_weight="2.6"
                            android:orientation="vertical">

                        <EditText
                                android:id="@+id/et_full_name"
                                android:layout_height="wrap_content"
                                android:layout_width="match_parent"
                                android:inputType="textPersonName"
                                android:hint="@string/hint_name"
                                android:layout_centerHorizontal="true"
                                android:layout_centerVertical="true"/>

                    </com.google.android.material.textfield.TextInputLayout>

                    <RelativeLayout
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_weight="0.4"
                            android:paddingRight="@dimen/spacing_large"
                            android:paddingLeft="0dp"
                            android:paddingStart="0dp"
                            android:paddingEnd="@dimen/spacing_large">

                        <ImageButton
                                android:id="@+id/ib_contacts"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginBottom="6dp"
                                android:layout_alignParentBottom="true"
                                android:layout_alignParentRight="true"
                                android:layout_alignParentEnd="true"
                                android:background="@drawable/ic_person_add"
                                android:contentDescription="@string/pick_user_content_description"/>

                    </RelativeLayout>

                </LinearLayout>

                <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/til_phone_number"
                        android:layout_height="wrap_content"
                        android:layout_width="match_parent"
                        android:orientation="vertical">

                    <EditText
                            android:id="@+id/et_phone_number"
                            android:layout_height="wrap_content"
                            android:layout_width="match_parent"
                            android:inputType="phone"
                            android:hint="@string/hint_phone_number"
                            android:layout_centerHorizontal="true"
                            android:layout_centerVertical="true"/>

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/til_amount"
                        android:layout_height="wrap_content"
                        android:layout_width="match_parent"
                        android:orientation="vertical">

                    <EditText
                            android:id="@+id/et_amount"
                            android:layout_height="wrap_content"
                            android:layout_width="match_parent"
                            android:inputType="numberDecimal"
                            android:hint="@string/hint_amount"
                            android:layout_centerHorizontal="true"
                            android:layout_centerVertical="true"/>

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/til_comment"
                        android:layout_height="wrap_content"
                        android:layout_width="match_parent"
                        android:orientation="vertical"
                        app:counterEnabled="true"
                        app:counterMaxLength="50"
                        app:counterOverflowTextAppearance="@style/TextAppearance.Design.Counter">

                    <EditText
                            android:id="@+id/et_comment"
                            android:layout_height="wrap_content"
                            android:layout_width="match_parent"
                            android:hint="@string/hint_comment"
                            android:layout_centerHorizontal="true"
                            android:layout_centerVertical="true"
                            android:maxLength="50"/>

                </com.google.android.material.textfield.TextInputLayout>

                <Button
                        android:id="@+id/btn_date_due"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        style="@style/buttonStyle"
                        tools:text="Date Due: Friday, March 29th 2017"/>

                <TextView
                        android:id="@+id/dummy"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>

                <Button
                        android:id="@+id/btn_date_created"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        style="@style/buttonStyle"
                        tools:text="Created on: Friday, March 29th 2017"/>

            </LinearLayout>

        </ScrollView>
    </LinearLayout>

</layout>